[package]
name = "bdk_cbf_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# BDK Core
bdk_chain = { path = "../../crates/chain", version = "0.4.0", features = ["serde", "miniscript"] }
keychain_tracker_example_cli = { path = "../../example-crates/keychain_tracker_example_cli" }
log = "^0.4"
env_logger = "0.7"

# CBF
nakamoto = { git = "https://github.com/cloudhead/nakamoto"  }
